# XQW

./: .gitignore  Camera.cpp  Camera.hpp  ControlDataTrans.cpp  ControlDataTrans.hpp  Detection.cpp  Detection.hpp  HostSide.pro  HostSide.pro.user.2d9628c.22  HostSide.pro.user.97062fa.4.9-pre1  HostSide_zh_CN.ts  MainCom.pro  MainCom.pro.user.2d9628c.22  MainCom_zh_CN.ts  MainTask.cpp  MainTask.hpp  README.md  Setting.hpp  TfliteWorker.cpp  TfliteWorker.hpp  VideoCompression.cpp  VideoCompression.hpp  VideoDataTrans.cpp  VideoDataTrans.hpp  display.cpp  display.hpp  loginWin.cpp  loginWin.hpp  loginWin.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  utils.hpp
Camera/demo/: CMakeLists.txt  CameraDemo.cpp
Camera/include/: Camera.hpp
Camera/src/: Camera.cpp
Codec/: README.md
Codec/demo/: CMakeLists.txt  CameraDemo.cpp  ReaderDemo.cpp  WriterDemo.cpp
Codec/src/: VideoReader.cpp  VideoWriter.cpp
Detection/: REDEME.md
Detection/demo/: CMakeLists.txt  TrackingDemo.cpp
Detection/include/: Common.hpp  Detection.hpp  ReDetect.hpp  TfliteWorker.hpp  TraEstim.hpp  Tracking.hpp
Detection/src/: Common.cpp  Detection.cpp  ReDetect.cpp  TfliteWorker.cpp  TraEstim.cpp  Tracking.cpp
DrawMap/demo/: CMakeLists.txt  DrawMapDemo.cpp
DrawMap/include/: Map.hpp  MapCam.hpp
Receiver/demo/: CMakeLists.txt  ReceiverDemo.cpp
Receiver/include/: ResultTransporter.hpp  VideoReceiver.hpp  transporter.hpp  udpbd_transporter.hpp
Receiver/src/: ResultTransporterDemo.cpp  VideoReceiver.cpp  udpbd_transporter.cpp
Transporter/: README.md
Transporter/demo/: CMakeLists.txt  ResultTransporterDemo.cpp  TransporterDemo.cpp  UdpBroadcastDemo.cpp
Transporter/include/: ResultTransporter.hpp  VideoTransporter.hpp  udpbd_transporter.hpp
Transporter/src/: VideoTransporter.cpp  udpbd_transporter.cpp
demo/CameraDemo/: CMakeLists.txt  CameraDemo.cpp  CameraDemo.pro  Makefile  aarch64.toolchain.cmake  hh.txt
demo/CodecDemo/: CMakeLists.txt  CameraDemo.cc  README.md  ReceiverDemo.cc  TransporterDemo.cc  VideoReader.cc  VideoReceiver.cc  VideoReceiver.h  VideoTransporter.cc  VideoTransporter.h  VideoWriter.cc
demo/CommDemo/: CMakeLists.txt  ResultTransporter.hpp  ResultTransporterDemo.cpp  UdpBroadcastDemo.cpp  udpbd_transporter.cpp
models/: model_full_integer_quant.tflite  model_integer_quant.tflite  person-v5lites-int8.tflite  person-v5n-int8.tflite  person224-v5n-int8.tflite  reid16.tflite  reid32.tflite
